fix path config.json