@@ -10,59 +10,68 @@ import org.picocontainer.MutablePicoContainer;
 import org.picocontainer.behaviors.Caching;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import java.io.IOException;
 
 import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class Pico {
-    private final MutablePicoContainer picoContainer;
-    private static Pico instance;
+    private MutablePicoContainer picoContainer;
     private final Logger logger = LoggerFactory.getLogger(getClass());
-    private Pico() throws JSONException {
-        // Récupération du fichier de config
-        ClassLoader cl = Thread.currentThread().getContextClassLoader();
-        InputStream configStream = cl.getResourceAsStream("config.json");
-        String configStr = null;
+    Pico() {
         try {
-            configStr = new String(configStream.readAllBytes());
+            // Récupération du fichier de config
+            Path filePath = Paths.get("src/main/java/fr/univlyon1/m2tiw/is/commandes/config.json");
+            String configStr = null;
+            try {
+                byte[] fileBytes = Files.readAllBytes(filePath);
+                configStr = new String(fileBytes);
+            } catch (IOException e) {
+                logger.trace("Le fichier config.json n'a pas été trouvé", e);
+                e.printStackTrace();
+            }
+
+            assert configStr != null;
+
+            // Récupération des données
+            JSONObject applicationConfig = new JSONObject(configStr).getJSONObject("application-config");
+
+            JSONArray businessComponents = applicationConfig.getJSONArray("business-components");
+            JSONArray serviceComponents = applicationConfig.getJSONArray("service-components");
+            JSONArray persistenceComponents = applicationConfig.getJSONArray("persistence-components");
+
+            // App
+            String keyName = "commande";
+            this.picoContainer = new DefaultPicoContainer(new Caching())
+                    .as(Characteristics.SDI).addComponent("GestionCommandeService", GestionCommandeServiceImpl.class)
+                    .addComponent(keyName, applicationConfig.getString("name"));
+
+            // MVC
+            var application = picoContainer.makeChildContainer();
+            var persistence = application.makeChildContainer();
+            var service = application.makeChildContainer();
+
+            String basicPrefix = "_Component";
+            String servicePrefix = "_Service" + basicPrefix;
+            String businessPrefix = "_Controller" + servicePrefix;
+            String persistencePrefix = "_Persistence" + servicePrefix;
+
+            for (int i = 0; i < serviceComponents.length(); i++) {
+                JSONObject compo = serviceComponents.getJSONObject(i);
+                addComponentFromJsonToClass(compo, service, servicePrefix);
+            }
+            for (int i = 0; i < persistenceComponents.length(); i++) {
+                JSONObject compo = persistenceComponents.getJSONObject(i);
+                addComponentFromJsonToClass(compo, persistence, persistencePrefix);
+            }
+            for (int i = 0; i < businessComponents.length(); i++) {
+                JSONObject compo = businessComponents.getJSONObject(i);
+                addComponentFromJsonToClass(compo, application, businessPrefix);
+            }
         } catch (Exception e) {
-            logger.trace("Resource config.json not found", e);
-        }
-        assert configStr != null;
-
-        // Récupération des données
-        JSONObject applicationConfig = new JSONObject(configStr).getJSONObject("application-config");
-
-        JSONArray businessComponents = applicationConfig.getJSONArray("business-components");
-        JSONArray serviceComponents = applicationConfig.getJSONArray("service-components");
-        JSONArray persistenceComponents = applicationConfig.getJSONArray("persistence-components");
-
-        // App
-        String keyName = "commande";
-        this.picoContainer = new DefaultPicoContainer(new Caching())
-                .as(Characteristics.SDI).addComponent("GestionCommandeService", GestionCommandeServiceImpl.class)
-                .addComponent(keyName, applicationConfig.getString("name"));
-
-        // MVC
-        var application = picoContainer.makeChildContainer();
-        var persistence = application.makeChildContainer();
-        var service = application.makeChildContainer();
-
-        String basicPrefix = "_Component";
-        String servicePrefix = "_Service" + basicPrefix;
-        String businessPrefix = "_Controller" + servicePrefix;
-        String persistencePrefix = "_Persistence" + servicePrefix;
-        
-        for (int i=0; i < serviceComponents.length(); i++) {
-            JSONObject compo = serviceComponents.getJSONObject(i);
-            addComponentFromJsonToClass(compo, service, servicePrefix);
-        }
-        for (int i=0; i < persistenceComponents.length(); i++) {
-            JSONObject compo = persistenceComponents.getJSONObject(i);
-            addComponentFromJsonToClass(compo, persistence, persistencePrefix);
-        }
-        for (int i=0; i < businessComponents.length(); i++) {
-            JSONObject compo = businessComponents.getJSONObject(i);
-            addComponentFromJsonToClass(compo, application, businessPrefix);
+            e.printStackTrace();
         }
     }
     private void addComponentFromJsonToClass(Object json, MutablePicoContainer components, String Prefix) throws JSONException {
